--- a/.golangci.yml
+++ b/.golangci.yml
@@ -15,6 +15,8 @@ run:
 
 # all available settings of specific linters
 linters-settings:
+  funlen:
+    lines: 100
   govet:
     # report about shadowed variables
     check-shadowing: true
@@ -47,5 +49,4 @@ linters:
     - gochecknoglobals
     - godox
     - interfacer
-    - wsl
 
